--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 <strong>Intan Wulandari</strong></p>
-            <p class="footer-note">Dibuat dengan ❤️ untuk UAS</p>
+            <p class="footer-note">Dibuat untuk UAS</p>
         </div>
     </footer>
 
